<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RemindMeWhatIWasDoing</string>
    <string name="send">Send</string>
    <string name="status_session_stop">Pause</string>
    <string name="status_session_start">Start</string>
    <string name="hello_world">Hello world!</string>
    <string name="remove_session">Delete Session</string>
    <string name="action_settings">Settings</string>
    <string name="menu_title">Menu</string>
    <string name="Sessions">Sessions</string>
    <string name="options">Options</string>
    <string name="about">About</string>
    <string name="title_activity_sessions">Sessions</string>
    <string name="title_activity_options">Options</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_selected_session">Name seesion</string>
    <string name="title_activity_task_creation">New Task</string>
    <string name="title_activity_share">Share</string>
    <string name="title_activity_logs">Logs</string>
    <string name="title_activity_session_creation">New Session</string>
    <string name="copiright">Deruaz Vincent - All Reserved</string>
    <string name="sessionName">Session Name</string>
    <string name="description">Description</string>
    <string name="start">Start</string>
    <string name="end">End</string>
    <string name="option_start_imediately">Start immediately</string>
    <string name="txtBtnNewSession">New Session</string>
    <string name="validate">Validate</string>
    <string name="E_mail">email</string>
    <string name="large_text">Large Text</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="start_timer">Start</string>
    <string name="remove_all_session">Remove all session</string>
    <string name="New_Task">New Task</string>
    <string name="Validation_create_new_rask">Create</string>
    <string name="stringNameNewTask">Name</string>
    <string name="stringDescriptionNewTask">Description</string>
    <string name="stringRecordLocation">Record Location</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="title_activity_mail">MailActivity</string>
    <string name="btnSendMailString">Send</string>
    <string name="stringFirstLastName">Firstname/Lastname</string>
    <string name="stringMailAdresse">Mail Adresse</string>
    <string name="string_reset_data">Reset Data</string>
    <string name="about_part_1">"Application to record activity/task to realise performances report."</string>
    <string name="about_part_2">Originally created during a mobile developpement course during my studies.</string>
    <string name="title_activity_pictures">PicturesActivity</string>
    <string name="title_activity_task_viewer">TaskViewerActivity</string>
    <string name="title_pics">Pictures</string>

</resources>
