<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#333333"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.remindmewhatsiwasdoing.TaskCreationActivity" >

    <Button
        android:id="@+id/btnCreateTask"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="23dp"
        android:text="@string/Validation_create_new_rask"
        android:textColor="#FFFFFF" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btnCreateTask"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/nameNewTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringNameNewTask"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/editTextTaskName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="#FFFFFF" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/descriptionNewTask"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stringDescriptionNewTask"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="#FFFFFF" />

        <EditText
            android:id="@+id/editTextMailAdresse"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textMultiLine"
            android:lines="@integer/lines_number_summary"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</RelativeLayout>